2006-08-13  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Patch from Loïc Minier <lool+gnome@via.ecp.fr> to
	not delete totem.schemas.in on make clean (Closes: #351148)

2006-08-13  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Loïc Minier <lool+gnome@via.ecp.fr> to
	fix the build with the Browser plugin disabled (Closes: #351144)

2006-08-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-private.h:
	* src/totem.c: (totem_action_save_size), (totem_action_save_state),
	(totem_setup_window):
	Save and restore the sidebar width (Closes: #316286)

============ Version 1.5.91

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.5.91

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp:
	Add video/x-msvideo as a supported mime-type for the GMP plugin,
	and break people's setups some more (Closes: #332550)

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h:
	* src/totem-mozilla-options.h:
	* src/totem-mozilla-viewer.c: (on_eos_event), (main):
	- Add audio/mpeg to the list of supported mime-types, will hopefully
	speed up the Mozilla unbreakage (Closes: #301913)
	- Fix debugging information in the main plugin
	- Add support for the "autostart" parameter
	- Destroy the stream if the child viewer died
	- Make repeat=true work even if we only have one video file

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: (on_volume_scroll_event),
	(totem_embedded_add_children): handle scroll-wheel events on
	the volume button as they should be handled (Closes: #341867)

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_mrl_to_title):
	Fix up brain-damage in the previous commit

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_mrl_to_title):